test/gpu/native/assertOnGpuVarRuntime.good
assertOnGpuVarRuntime.chpl:2: error: assertOnGpu() failed
